--- a/style/style.scss
+++ b/style/style.scss
@@ -227,12 +227,16 @@ body {
 }
 
 .canvas {
-  background: url('../img/filler.png') center center/cover;
+  background: #252934 url('../img/filler.png') center center/cover;
   height: 100%;
   left: 0;
   position: absolute;
   top: 0;
   width: 100vw;
+
+  canvas {
+    background: #252934;
+  }
 }
 
 .button {
