--- a/style/style.scss
+++ b/style/style.scss
@@ -395,14 +395,23 @@ nav {
     }
   }
 
-  .mdi-menu {
+  .nav-toggle {
+    background: none;
+    border: none;
     color: #fff;
-    font-size: 28pt;
-    line-height: 60px;
+    cursor: pointer;
     position: absolute;
     right: 20px;
     top: 0;
+    height: 60px;
+    width: 44px;
+    padding: 0;
     transition: color 0.3s;
+
+    .mdi-menu {
+      font-size: 28pt;
+      line-height: 60px;
+    }
 
     &:hover {
       color: $primary;
@@ -1571,7 +1580,7 @@ footer {
       }
     }
 
-    .mdi-menu {
+    .nav-toggle {
       display: none;
     }
   }
