Add Dronai project section to index.html and modal.js; include new images for slides and thumbnails; update styles for project card in CSS.

--- a/style/style.scss
+++ b/style/style.scss
@@ -936,6 +936,12 @@ section {
           }
         }
 
+        &:nth-child(13) {
+          .card {
+            background: #ffffff url('../img/thumb-dronai.png') center center/60% no-repeat;
+          }
+        }
+
         .card {
           height: 260px;
           max-width: 100%;
